[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes_Scripts/EncounterMobHUD.gd" type="Script" id=1]
[ext_resource path="res://KarmaFuture.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[node name="EncounterMobHUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="RoomInformationLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -229.0
margin_top = 401.0
margin_right = 227.0
margin_bottom = 450.0
custom_fonts/font = SubResource( 1 )

[node name="InformationTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="FightButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -300.0
margin_top = -125.0
margin_right = -50.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 2 )
text = "Fight"

[node name="RunButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 50.0
margin_top = -125.0
margin_right = 300.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 2 )
text = "Run"
[connection signal="pressed" from="FightButton" to="." method="_on_FightButton_pressed"]
[connection signal="pressed" from="RunButton" to="." method="_on_RunButton_pressed"]
